# axiom-control-daemon

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
.circleci/: config.yml
API_WS/: CMakeLists.txt  IMessageHandler.h  Main.cpp  MessageDefines.h  MessageHandler.cpp  MessageHandler.h  WSServer.cpp  WSServer.h
Adapter/: CMV12000Adapter.cpp  CMV12000Adapter.h  I2CAdapter.cpp  I2CAdapter.h  IAdapter.cpp  IAdapter.h  IDaemonModule.h  MemoryAdapter.h  MemoryAdapterDummy.h
CLI/: CMakeLists.txt  Main.cpp
Daemon/: Daemon.cpp  Daemon.h  Main.cpp  description.json
Log/: DefaultLogger.cpp  DefaultLogger.h  ILogger.h  JournalLogger.h  Logger.cpp  Logger.h
Schema/: axiom_daemon.fbs
UnitTests/: CMV12000AdapterTests.cpp  CMakeLists.txt  DaemonModuleTests.cpp  DaemonTests.cpp  MessageHandlerTests.cpp
systemd/: axiom.service  install_daemon.sh
