CMAKE_MINIMUM_REQUIRED(VERSION 3.10)
PROJECT(WSServer)

FILE(GLOB SOURCE_FILES "*.cpp" "*.h")

# uWebSockets
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/../3rdParty/uWebSockets/src)
FILE(GLOB UWEBSOCKETS_SOURCE_FILES "${PROJECT_SOURCE_DIR}/../3rdParty/uWebSockets/src/*.cpp")

MESSAGE(STATUS "Files: ${SOURCE_FILES}")
ADD_EXECUTABLE(${PROJECT_NAME} ${SOURCE_FILES} ${UWEBSOCKETS_SOURCE_FILES})

ExternalProject_Get_Property(flatbuffers_project SOURCE_DIR)
MESSAGE(STATUS "flatbuffers source dir: ${SOURCE_DIR}")
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PUBLIC ${SOURCE_DIR}/include)

TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PUBLIC ${CMAKE_BINARY_DIR}/src/ ../3rdParty/)

ADD_DEPENDENCIES(${PROJECT_NAME} flatbuffers_project flatc_cpp_gen)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ssl z crypto)
