CMAKE_MINIMUM_REQUIRED(VERSION 3.10)
PROJECT(WSServer)

FILE(GLOB SOURCE_FILES "*.cpp" "*.h")

# uWebSockets
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/../3rdParty/uWebSockets/src)
add_custom_target(uWebSockets
                  COMMAND make Linux
                  WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/../3rdParty/uWebSockets/)

MESSAGE(STATUS "Files: ${SOURCE_FILES}")
ADD_EXECUTABLE(${PROJECT_NAME} ${SOURCE_FILES})

TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PUBLIC ${CMAKE_BINARY_DIR}/src/ ../3rdParty/)

ADD_DEPENDENCIES(${PROJECT_NAME} axiom_daemon)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${PROJECT_SOURCE_DIR}/../3rdParty/uWebSockets/libuWS.so ssl z crypto)
