CMAKE_MINIMUM_REQUIRED(VERSION 3.10)
PROJECT(WSServer)

FILE(GLOB SOURCE_FILES "*.cpp" "*.h")

MESSAGE(STATUS "Files: ${SOURCE_FILES}")
ADD_EXECUTABLE(${PROJECT_NAME} ${SOURCE_FILES})

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/3rdParty/websocketpp/)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/3rdParty/asio/asio/include/)
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PUBLIC ${CMAKE_BINARY_DIR}/src/ ../3rdParty/)

ADD_DEPENDENCIES(${PROJECT_NAME} axiom_daemon)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} pthread)
